--- a/lib/folding_in_elixir_web/components/layouts/app.html.heex
+++ b/lib/folding_in_elixir_web/components/layouts/app.html.heex
@@ -1,3 +1,5 @@
 <main>
-  <div class="mx-auto"><.flash_group flash={@flash} /> {@inner_content}</div>
+  <div class="mx-auto w-[70%] bg-red-400">
+    <.flash_group flash={@flash} /> {@inner_content}
+  </div>
 </main>
